# expr-cpp

./: .clang-format  CMakeLists.txt
include/: ast.h  eval.h  object.h  parser.h  tokenizer.h
src/: ast.cpp  eval.cpp  object.cpp  parser.cpp  tokenizer.cpp
tests/: TestEvaluator.cpp  TestParser.cpp  TestTokenizer.cpp
